게시글 수정, 삭제 Controller, View, Service, JS 추가

--- a/src/main/resources/templates/posts-save.mustache
+++ b/src/main/resources/templates/posts-save.mustache
@@ -1,5 +1,35 @@
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 {{>layout/header}}
-
+<script>
+    var main = {
+    init : function(){
+    var _this = this;
+        $('#btn-save').on('click', function(){
+            _this.save();
+        });
+    },
+    save : function(){
+        var data = {
+            title : $('#title').val(),
+            author : $('#author').val(),
+            content : $('#content').val()
+    };
+     $.ajax({
+            type: 'POST',
+            url: '/api/v1/posts',
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            data: JSON.stringify(data)
+        }).done(function(){
+            alert('글이 등록되었습니다.');
+            window.location.href= '/';
+        }).fail(function(error) {
+            alert(JSON.stringify(error));
+        });
+    }
+};
+main.init();
+</script>
 <h1>게시글 등록</h1>
 
 <div class="col-md-12">
